--- a/style.css
+++ b/style.css
@@ -1,36 +1,50 @@
+body, html {
+	font-family: Verdana;
+}
+
+
 #header {
 	height: 20px;
 
 }
 
+#search_field {
+	width: 400px;
+	font-size: 18px;
+	font-stretch: 5px;
+	padding: 2px;
+}
+
 #search {
-	height: 200px;
+	height: 20px;
 	margin: 10px;
+	padding-bottom: 20px;
 }
 
 #results {
 	margin: 10px;
-	min-height: 40px;
+	min-height: 10px;
 
 }
 
 .result_item {
 	padding: 5px;
-	font-family: 
+	font-family: Verdana;
+	border-bottom: 1px dashed gray;
 }
 
 .title {
-	font-size: 20px;
-	font-weight: bold; 
+	font-size: 14px;
+	font-weight: 500; 
 }
 
 .author {
-	font-size: 8px;
+	font-size: 10px;
 	color: gray;
 }
 
 .link {
-	font-size: 6px;
+	font-size: 8px;
 	color:green;
 	
 }
