--- a/style.css
+++ b/style.css
@@ -11,7 +11,6 @@ body, html {
 #search_field {
 	width: 400px;
 	font-size: 18px;
-	font-stretch: 5px;
 	padding: 2px;
 }
 
@@ -30,7 +29,23 @@ body, html {
 .result_item {
 	padding: 5px;
 	font-family: Verdana;
-	border-bottom: 1px dashed gray;
+	border-bottom: 1px dashed #BABAAE;
+}
+
+
+.cover {
+	float: left;
+	width: 40px;
+	min-height: 40px;
+	background-color: #F1F1EF;
+	padding: 0px;
+}
+
+.text {
+	float: left;
+	width: 400px;
+	padding-left: 10px;
+	
 }
 
 .title {
@@ -45,6 +60,7 @@ body, html {
 
 .link {
 	font-size: 8px;
+	padding-top: 5px;
 	color:green;
 	
 }
